# Mistletoe-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  deploy-windows.sh  deploy.sh  deploy_compute.sh  deploy_control.sh  deploy_windows.sh
compute/: BNO055.py  IMU.py  PPOActorModel.py  PPOPolicy.py  README.md  StateEstimatorModel.py  VelocityTrackingModel.py  command_forwarding.py  main not real.py  main.py  main_backup.py  orangepi-setup.md  real vs sim comparison observations  test.py  test_main.py  test_obs_model.py  test_ppo_model.py  test_receive_operator.py  utils.py  zero_pos.py
compute/exlcm/: __init__.py  quad_command_t.py  quad_state_t.hpp  quad_state_t.py
compute/rknn_models/: policy.rknn  ppo_policy.rknn  state_estimator.rknn
control/: CMakeLists.txt  README.md  build.sh  control copy.cpp  control.cpp  homing.py  quad_state_recv_t.lcm  quad_state_send_t.lcm  test-lcm-client.cpp  test-lcm-server.cpp  test.cpp  utils.h  utils.hpp  zero.sh
control/exlcm/: quad_state_recv_t.hpp  quad_state_send_t.hpp  quad_state_t.hpp
dashboard/: README.md  package-lock.json  package.json
dashboard/3D-dashboard/: README.md
dashboard/3D-dashboard/assets/mistletoe_urdf/: mistletoe.urdf
dashboard/3D-dashboard/assets/mistletoe_urdf/mistletoe_description/meshes/: ANKLE_v4_1.stl  ANKLE_v4_3.stl  ANKLE_v4_4.stl  Electrical_1.stl  Hip_3.stl
dashboard/3D-dashboard/src/: index.html
dashboard/assets/QUADurdf/: quadurdf.urdf
dashboard/assets/mistletoe_urdf/: mistletoe.urdf
dashboard/assets/mistletoe_urdf/mistletoe_description/meshes/: ANKLE_v4_2.stl  Hip_1.stl  Hip_2.stl  Hip_4.stl
dashboard/main-dashboard/: package.json
dashboard/main-dashboard/backend/: data_t.lcm  lcm_publisher_test.py  package-lock.json  quad_state_t.lcm  send_lcm.py  socket.js  socket_server.py  socket_server_lcm.py  socket_server_lcm_2.py  socket_server_lcm_real.py  socket_server_test.py  wstest.py
dashboard/main-dashboard/backend/exlcm/: __init__.py  data_t.py
dashboard/main-dashboard/frontend/: package-lock.json  package.json
dashboard/main-dashboard/frontend/src/: App.js  MainContainer.js  styles.css  theme.js
dashboard/main-dashboard/frontend/src/components/: BusVoltageDisplay.js  Dashboard.js  FaultDisplay.js  FaultMessage.js  Graph.js  ToggleButton.js  websocket.js
dashboard/main-dashboard/frontend/src/utils/: voltageUtils.js  websocket.js
dashboard/main-dashboard/test/: example_t.lcm
dashboard/src/: URDFGrabControls.js  app.js  index.html  styles.css
exlcm/: example_t.hpp
operator/: operator_controller.py  operator_publish_commands_test.py  operator_publish_test.py  test_operator_commands.py
operator/exlcm/: __init__.py  quad_command_t.py  velocity_command_t.py
setup-files/: README.md
setup-files/network-configs/: manage-routes  manage-routes-and-script
setup-files/services/: mistletoe-compute.service  mistletoe-control.service
types/: README.md  enabled_t.lcm  quad_command_t.lcm  quad_state_t.lcm  velocity_command_t.lcm
types/exlcm/: __init__.py  enabled_t.hpp  enabled_t.py  quad_command_t.hpp  quad_state_t.py  velocity_command_t.py
utils/: jacobian.ipynb
